Fixed grid layout issue caused by icons that aren't uniform in size. Increased dynamic sizing to include large screens

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -197,6 +197,8 @@ section.success {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    display:flex;
+    flex-wrap:wrap;
 }
 
 #portfolio .portfolio-item .portfolio-link {
